# album-exporter

./: .gitignore  CMakeLists.txt  CheckableSqlQueryModel.cpp  CheckableSqlQueryModel.h  DbManager.cpp  DbManager.h  Info.plist  KeyPressEater.cpp  KeyPressEater.h  LICENSE  ProjectSettings.cpp  ProjectSettings.h  README.md  Task.cpp  Task.h  TaskExe.cpp  TaskExe.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
resources/: album-exporter.icns
utils/: ALBUM_JOIN_ASSET_sql.sql
